tests/src/Loader/classloader/generics/Instantiation/Positive/NestedInterface03.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Positive_NestedInterface03_NestedInterface03_
    {
        [Fact]
        public void _generics_Instantiation_Positive_NestedInterface03_NestedInterface03_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\NestedInterface03\\NestedInterface03.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
