tests/src/Loader/classloader/generics/Instantiation/Negative/abstract01.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract01_abstract01_
    {
        [Fact]
        public void _generics_Instantiation_Negative_abstract01_abstract01_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract01\\abstract01.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
